--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -3,16 +3,18 @@ version: '3.3'
 services:
 
   web:
-    container_name: payoff_web_dev
+    container_name: payoff_web_web
     build: 
       context: .
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile.prod
+    command: gunicorn chartJsProject.wsgi:application --timeout 2400 --bind 0.0.0.0:8000      
     # command: python manage.py runserver 0.0.0.0:8000  
     volumes:
       - .:/code
-    tty: true
     ports:
       - "8001:8000"
+    env_file:
+      - ./.env.prod
     networks:
       rob_network:
         ipv4_address: 172.18.0.101
