--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -13,6 +13,8 @@ services:
     tty: true
     ports:
       - "8001:8000"
+    env_file:
+      - ./.env.dev
     networks:
       rob_network:
         ipv4_address: 172.18.0.101
