--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -3,7 +3,7 @@ version: '3.3'
 services:
 
   web:
-    container_name: payoff_web_web
+    container_name: payoff_web
     build: 
       context: .
       dockerfile: Dockerfile.prod
