--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.0
 backports.zoneinfo==0.2.1
 Django==4.0.4
 flake8==4.0.1
+gunicorn==18.0
 mccabe==0.6.1
 mypy==0.991
 mypy-extensions==0.4.3
