--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -11,8 +11,10 @@ services:
     # command: python manage.py runserver 0.0.0.0:8000  
     volumes:
       - .:/code
-    ports:
-      - "8001:8000"
+    expose:
+      - 8000
+    # ports:
+    #   - "8001:8000"
     env_file:
       - ./.env.prod
     networks:
